--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css" type="text/css">
 <link href="css/lightbox.css" rel="stylesheet">
 
-<link rel="stylesheet" href="css/estilos.css">
+<link rel="stylesheet" href="estilos.css">
 
 </head>
 
