--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
  <link href="http://www.patinajeapuestaselpueblo.tk/img/logo.jpg" rel="image_src" />    
 
 	<title>Club Apuestas el Pueblo</title>
-  <link rel="shortcut icon" type="imagen/x-icon" href="img/logo.ico" />
-    <link title="Club Apuestas el Pueblo" rel="shortcut icon" type="imagen/vnd.microsof.icon" href="img/logo.ico" />
+  <link rel="shortcut icon" type="imagen/x-icon" href="logo.ico" />
+    <link title="Club Apuestas el Pueblo" rel="shortcut icon" type="imagen/vnd.microsof.icon" href="logo.ico" />
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
