--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
 <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css" type="text/css">
-<link href="css/lightbox.css" rel="stylesheet">
+<link href="lightbox.css" rel="stylesheet">
 
 <link rel="stylesheet" href="estilos.css">
 
